syntax = "proto3";

package proto;

message ProtoMessage {
  string uuid = 1;
  string sender_uuid = 2;
  int64 timestamp = 3;
  string room_uuid = 4;

  oneof content {
    TextMessage text = 5;
    AckMessage status = 6;
  }
}

message TextMessage {
  string text = 1;
}

message AckMessage {
  string message_uuid = 1;
  bool received = 2;
  bool read = 3;
}
